<resources>
    <string name="app_name">DisorderApp</string>
    <string name="title_activity_sugar_mod">SugarModActivity</string>
    <string name="main_btn_sugar">Sugar Module</string>
    <string name="main_btn_exercise">Exercise Module</string>
    <string name="main_btn_sleep">Sleep Module</string>
    <string name="main_btn_other">Others</string>
    <string name="sugar_title">Sugar Module Tasks</string>
    <string name="sugar_soda">Soda</string>
    <string name="sugar_breakfast">Breakfast Pastries</string>
    <string name="sugar_snacks">Sweet Snacks</string>
    <string name="title_activity_sugar_program">SugarProgramActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_self_assessment">SelfAssessmentActivity</string>
    <string name="drawer_sleep_progress">Sleep</string>
    <string name="drawer_exercise_progress">Exercise</string>
    <string name="drawer_sugar_progress">Sugar</string>
    <string name="login_username">User Name:</string>
    <string name="login_username_hint">Please enter your user id</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">Please enter your password</string>
    <string name="login_btn">Log in</string>
    <string name="login_register">Register</string>
    <string name="splash_screen_text">This is a splash screen, Logo here</string>
    <string name="title_activity_pre_self_monitor">PreSelfMonitorActivity</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="submit_text">Are you sure you want to submit this record?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>