<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android   = "http://schemas.android.com/apk/res/android"
    xmlns:tools     = "http://schemas.android.com/tools"

    android:layout_width        =   "match_parent"
    android:layout_height       =   "match_parent"
    android:paddingBottom       =   "@dimen/activity_vertical_margin"
    android:paddingLeft         =   "@dimen/activity_horizontal_margin"
    android:paddingRight        =   "@dimen/activity_horizontal_margin"
    android:paddingTop          =   "@dimen/activity_vertical_margin"
    tools:context               =   "ur.disorderapp.LoginActivity">


    <TextView
        android:layout_width        = "match_parent"
        android:layout_height       = "wrap_content"
        android:text                = "@string/login_username"
        android:textSize            = "15sp"
        android:id                  = "@+id/login_username"
        android:layout_marginTop    = "40dp"
        />

    <EditText
        android:layout_width        = "match_parent"
        android:layout_height       = "wrap_content"
        android:hint                = "@string/login_username_hint"
        android:id                  = "@+id/login_username_hint"
        android:layout_below        = "@id/login_username"
        android:textSize            = "15sp"
        />

    <TextView
        android:layout_width        = "match_parent"
        android:layout_height       = "wrap_content"
        android:text                = "@string/login_password"
        android:textSize            = "15sp"
        android:id                  = "@+id/login_password"
        android:layout_marginTop    = "20dp"
        android:layout_below        = "@id/login_username_hint"
        />

    <EditText
        android:layout_width        = "match_parent"
        android:layout_height       = "wrap_content"
        android:hint                = "@string/login_password_hint"
        android:id                  = "@+id/login_password_hint"
        android:inputType           = "textPassword"
        android:layout_below        = "@id/login_password"
        android:textSize            = "15sp"
        />

    <Button
        android:layout_width        = "match_parent"
        android:layout_height       = "wrap_content"
        android:layout_below        = "@id/login_password_hint"
        android:layout_marginTop    = "70dp"
        android:text                = "@string/login_btn"
        android:id                  = "@+id/login_btn"
        />

    <Button
        android:layout_width        = "match_parent"
        android:layout_height       = "wrap_content"
        android:layout_below        = "@id/login_btn"
        android:layout_marginTop    = "20dp"
        android:text                = "@string/login_register"
        android:id                  = "@+id/login_btn_register"
        />

</RelativeLayout>