<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android       ="http://schemas.android.com/apk/res/android"
    xmlns:app           ="http://schemas.android.com/apk/res-auto"

    android:layout_width        ="match_parent"
    android:layout_height       ="@dimen/nav_header_height"
    android:background          ="@drawable/side_nav_bar"
    android:gravity             ="bottom"
    android:orientation         ="horizontal"
    android:paddingBottom       ="@dimen/activity_vertical_margin"
    android:paddingLeft         ="@dimen/activity_horizontal_margin"
    android:paddingRight        ="@dimen/activity_horizontal_margin"
    android:paddingTop          ="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width        ="75dp"
        android:layout_height       ="wrap_content"
        android:orientation         ="vertical">
        <TextView
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:text            ="@string/drawer_sugar_progress"/>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            app:background_progressbar_color="#cdf3ff"
            app:background_progressbar_width="3dp"
            app:progressbar_color           ="#f25596"
            app:progressbar_width           ="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width                ="75dp"
        android:layout_height               ="wrap_content"
        android:orientation                 ="vertical">

        <TextView
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            android:text                    ="@string/drawer_exercise_progress"/>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            app:background_progressbar_color="#cdf3ff"
            app:background_progressbar_width="3dp"
            app:progressbar_color           ="#ff8d54"
            app:progressbar_width           ="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width                ="75dp"
        android:layout_height               ="wrap_content"
        android:orientation                 ="vertical">
        <TextView
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            android:text                    ="@string/drawer_sleep_progress"/>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width            ="wrap_content"
            android:layout_height           ="wrap_content"
            app:background_progressbar_color="#cdf3ff"
            app:background_progressbar_width="3dp"
            app:progressbar_color           ="#4e7c8b"
            app:progressbar_width           ="20dp" />
    </LinearLayout>

</LinearLayout>